# RemoteController

./: CMakeLists.txt  README.md  mac-config.sh  unix-config.sh
include/: Client.hh  CommandInterpreter.hh  LineParser.hh  RemoteControl.hh  RemoteControlException.hpp  RemoteController.hh  Server.hh  ServerCommand.hh
src/: LineParser.cpp  RemoteControlException.cpp
src/client/: Client.cpp  CommandInterpreter.cpp  main.cpp
src/server/: LineParser.cpp  RemoteController.cpp  Server.cpp  ServerCommand.cpp  main.cpp
